@@ -1,48 +1,24 @@
-Copyright (C) 2001-2007 The Regents of the University of California.
-Produced at Lawrence Livermore National Laboratory.
-Written by Jim Garlick <garlick@llnl.gov> and Albert Chu <chu11@llnl.gov>.
-UCRL-CODE-2003-004.
+This work was produced at the Lawrence Livermore National Laboratory
+(LLNL) under Contract No. DE-AC52-07NA27344 (Contract 44) between
+the U.S. Department of Energy (DOE) and Lawrence Livermore National
+Security, LLC (LLNS) for the operation of LLNL.
 
-This file is part of Gendersllnl, a cluster configuration database and
-rdist preprocessor for LLNL site specific needs.  This package was
-originally a part of the Genders package, but has now been split off
-into a separate package.  For details, see
-<http://www.llnl.gov/linux/genders/>.
+This work was prepared as an account of work sponsored by an agency of
+the United States Government.  Neither the United States Government nor
+Lawrence Livermore National Security, LLC nor any of their employees,
+makes any warranty, express or implied, or assumes any liability or
+responsibility for the accuracy, completeness, or usefulness of any
+information, apparatus, product, or process disclosed, or represents
+that its use would not infringe privately-owned rights.
 
-Gendersllnl is free software; you can redistribute it and/or modify it
-under the terms of the GNU General Public License as published by the
-Free Software Foundation; either version 2 of the License, or (at your
-option) any later version.
+Reference herein to any specific commercial products, process, or
+services by trade name, trademark, manufacturer or otherwise does
+not necessarily constitute or imply its endorsement, recommendation,
+or favoring by the United States Government or Lawrence Livermore
+National Security, LLC.  The views and opinions of authors expressed
+herein do not necessarily state or reflect those of the Untied States
+Government or Lawrence Livermore National Security, LLC, and shall
+not be used for advertising or product endorsement purposes.
 
-Gendersllnl is distributed in the hope that it will be useful, but
-WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with Gendersllnl; if not, write to the Free Software Foundation,
-Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA.
-
-This notice is required to be provided under our contract with the U.S.
-Department of Energy (DOE).  This work was produced at the University
-of California, Lawrence Livermore National Laboratory under Contract
-No. W-7405-ENG-48 with the DOE.
-
-Neither the United States Government nor the University of California
-nor any of their employees, makes any warranty, express or implied, or
-assumes any liability or responsibility for the accuracy, completeness,
-or usefulness of any information, apparatus, product, or process
-disclosed, or represents that its use would not infringe
-privately-owned rights.
-
-Also, reference herein to any specific commercial products, process, or
-services by trade name, trademark, manufacturer or otherwise does not
-necessarily constitute or imply its endorsement, recommendation, or
-favoring by the United States Government or the University of
-California.  The views and opinions of authors expressed herein do not
-necessarily state or reflect those of the United States Government or
-the University of California, and shall not be used for advertising or
-product endorsement purposes.
-
-The precise terms and conditions for copying, distribution and
+The precise terms and conditions for copying, distribution, and
 modification are specified in the file "COPYING".
