@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.10 2007-04-21 14:47:28 chu11 Exp $
+## $Id: Makefile.am,v 1.11 2007-10-17 18:13:33 chu11 Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -8,4 +8,4 @@ DISTCHECK_CONFIGURE_FLAGS = --with-perl-destdir=$$dc_install_base
 
 SUBDIRS = src man dist compat
 
-EXTRA_DIST = META DISCLAIMER gendersllnl.spec
+EXTRA_DIST = META DISCLAIMER DISCLAIMER.UC gendersllnl.spec
