@@ -35,7 +35,7 @@ DESTDIR="$RPM_BUILD_ROOT" make install
 
 %files
 %defattr(-,root,root)
-%doc README ChangeLog COPYING NEWS DISCLAIMER
+%doc README ChangeLog COPYING NEWS DISCLAIMER DISCLAIMER.UC
 # It doesn't matter if the user chooses a 32bit or 64bit target.  The
 # packaging must work off whatever Perl is installed.
 %define _perldir %(perl -e 'use Config; $T=$Config{installsitearch}; $T=~/(.*)\\/site_perl.*/; print $1;')
